Correct 615 MQ, text align center in menu

--- a/css/main.css
+++ b/css/main.css
@@ -477,20 +477,11 @@ footer img:nth-of-type(4) {
         display: inline;
         padding: 5px 4%;
     }
-}
-/*
-@media (max-width: 615px) {
-    nav ul li {
-        display: inline;
-        padding: 5px 4%;
-    }
     ul {
         text-align: center;
     }
-    section img {
-        max-width: 190px;
-    }
-}*/
+}
+
 @media (min-width: 900px) {
     iframe:nth-of-type(1) {
         display: none;
